--- a/index.html
+++ b/index.html
@@ -40,10 +40,11 @@
 			<div class="slides">
 
 				<section>
-					<h1>React Warsaw</h1>
-					<h3>React Starter Kit</h3>
+					<h1>React Warsaw #3</h1>
+					<h3>React Native</h3>
+          <h4>Introduction to building native mobile applications with React </h4>
 					<p>
-						<small><a href="http://danielkopka.com">Daniel Kopka</a> / <a href="http://twitter.com/danielkopka">@danielkopka</a></small>
+						<small><a href="mailto:marcin.mieszek@gmail.com">Marcin Mieszek</a></small>
 					</p>
 				</section>
 
