--- a/index.html
+++ b/index.html
@@ -38,6 +38,20 @@
 
 		<div class="reveal">
 			<div class="slides">
+				<section>
+					<h1>React Warsaw #3</h1>
+					<h3>Welcome!</h3>
+				</section>
+				<section>
+					<h1>Agenda</h1>
+					<ol>
+					<li>Welcome guests and sponsors</li>
+					<li>Introduction to building native mobile applications with React - Marcin Mieszek</li>
+					<li>Pizza time!</li>
+					<li>Spark Starter Kit: Rails, Spree, React, Webpack + Hot Reload and more - Adam Paca</li>
+					</ol>
+				</section>
+
 
 				<section>
 					<h1>React Warsaw #3</h1>
@@ -49,414 +63,180 @@
 				</section>
 
 				<section>
-					<h1>About me</h1>
-				</section>
-
-				<section>
 					<h2>We will talk about:</h2>
-					<p class="fragment">Flow</p>
-					<p class="fragment">Tools</p>
-					<p class="fragment">Project layout</p>
+					<p class="fragment">Mobile development challenges</p>
+					<p class="fragment">Why React Native?</p>
+					<p class="fragment">Architecture</p>
+					<p class="fragment">Getting Started</p>
+					<p class="fragment">Components and APIs</p>
+					<p class="fragment">Styles</p>
+					<p class="fragment">Tips</p>
 				</section>
 
 				<section>
+					<h2>Mobile development challenges</h2>
+					<p class="fragment">Slow development and deployment cycle</p>
+					<p class="fragment">Platform specific skillset</p>
+					<p class="fragment">Stateful, mutable UI</p>
+					<p class="fragment">Poor performance of html-based frameworks</p>
+				</section>	
 
+				<section>
+					<h2>Why React Mative?</h2>
+					<p class="fragment">Instant reload</p>
+					<p class="fragment">Updates without resubmission</p>
+					<p class="fragment">Consistent tooling and common APIs for web and mobile</p>
+					<p class="fragment">Shared skillset</p>
+					<p class="fragment">Code reuse</p>
+					<p class="fragment">Backed by native components</p>
+					<p class="fragment">Immutable views</p>
+					<p class="fragment">External modules and components</p>
+					<p class="fragment">Browser debugging</p>
+				</section>	
+
+				<section>
 					<section>
-						<h2>Flow</h2>
-						<p>What kind of steps we need to take from source to deployment</p>
+						<h2>Architecture</h2>
+						<p class="fragment">JavaScript Framework</p>
+						<p class="fragment">Reuse JS and React experience</p>
+						<p class="fragment">Wrapper to standard native IOS or Android Components/APIS</p>
+						<p class="fragment">All operations are asynchronuous</p>
+						<p class="fragment">Powerful gestures support including mutlitouch</p>
 					</section>
-
+					<!--
 					<section>
-						<h2>Development</h2>
-						<img data-src="img/development-flow.png">
+						<img data-src="img/react-native.png" style="border: 0">
 					</section>
-
-					<section>
-						<h2>Deployment</h2>
-						<img data-src="img/deployment-flow.png">
-					</section>
-
-					<section>
-						<h2>Tools</h2>
-						<p class="fragment">Grunt</p>
-						<p class="fragment">Gulp</p>
-						<p class="fragment">Scripts (package.json)</p>
-						<p class="fragment">ShellJS</p>
-					</section>
-
+					-->
 				</section>
 
 				<section>
+				<section>
+										<h2>Getting Started</h2>
+					<p class="fragment">Mac + Xcode</p>
+					<p class="fragment">npm install -g react-native-cli</p>
+					<p class="fragment">react-native init HelloWorldProject</p>
+				</section>
 
-					<section>
-						<h2>Source</h2>
-						<p>Plain text is not enough</p>
+										<section>
+					<h2>First Component</h2>
+					<pre><code class="javascript" data-trim contenteditable style="font-size: 20px;">
+import React, {
+  AppRegistry, Component, Text, View,
+} from 'react-native';
+
+class Hello extends Component {
+  render() {
+    return (
+    	&lt;View&gt;&lt;Text&gt;Hello, World!&lt;/Text&gt;&lt;/View&gt;
+    )
+  }	
+}	
+
+AppRegistry.registerComponent('Hello', () => Hello);
+					</code></pre>
 					</section>
-
-					<section>
-						<h2>Challenges</h2>
-						<p class="fragment">JSX<span class="fragment"> - <a her="http://babeljs.io/">Babel</a></span></p>
-						<p class="fragment">ES6<span class="fragment"> - <a her="http://babeljs.io/">Babel</a></span></p>
-						<p class="fragment">CSS pre-processors<span class="fragment"> - up to you</span></p>
-						<p class="fragment">Promise<span class="fragment"> - <a href="http://bluebirdjs.com">Bluebird</a></span></p>
-						<p class="fragment">Polyfills<span class="fragment"> - <a her="http://babeljs.io/">Babel</a></span></p>
-						<p class="fragment">Routing<span class="fragment"> - <a href="http://www.kriasoft.com/react-routing/">react-routing</a> / <a href="https://github.com/rackt/react-router">react-router</a></span></p>
-						<p class="fragment">
-							Flux
-							<span class="fragment"> -
-								<a href="https://facebook.github.io/flux/">Flux</a> /
-								<a href="http://redux.js.org/">Redux</a> /
-								<a href="https://github.com/reflux/refluxjs">Reflux</a> /
-								<a href="http://alt.js.org/">Alt</a>
-							</span>
-						</p>
-					</section>
-
-					<section>
-						<h2>Example - Babel</h2>
-						<pre><code class="javascript" data-trim contenteditable style="font-size: 20px;">
-// .babelrc
-{
-  "presets": ["react", "es2015", "stage-2"],
-  "plugins": ["add-module-exports"],
-  "env": {
-    "development": {
-      "presets": ["react-hmre"]
-    }
-  }
-}
-						</code></pre>
-						<pre><code class="bash" data-trim contenteditable style="font-size: 20px;">
-// Build
-babel src --out-dir lib
-						</code></pre>
-					</section>
-
 				</section>
 
 				<section>
+					<h2>Components</h2>
+					<p class="fragment">View</p>
+					<p class="fragment">Text</p>
+					<p class="fragment">TextInput</p>
+					<p class="fragment">TouchableHighlight</p>
+					<p class="fragment">Image</p>
+					<p class="fragment">ListView</p>
+					<p class="fragment">ScrollView</p>
+					<p class="fragment">TabBarIOS</p>
+				</section>
+
+				<section>
+					<h2>APIs</h2>
+					<p class="fragment">StyleSheet</p>
+					<p class="fragment">CameraRoll</p>
+					<p class="fragment">Dimensions</p>
+				</section>				
 
 					<section>
-						<h2>Lint</h2>
-						<p>Because style matters</p>
-					</section>
+					<h2>Styles and Flexbox</h2>
 
-					<section>
-						<h2>There are two kinds of people</h2>
-						<pre><code class="javascript" data-trim contenteditable style="font-size: 20px;">
-function() {
-
-}
-                    	</code></pre>
-						<pre><code class="javascript" data-trim contenteditable style="font-size: 20px;">
-function ()
-{
-
-}
-                    	</code></pre>
-					</section>
-
-					<section>
-						<h2>Solutions</h2>
-						<p class="fragment">JSHint</p>
-						<p class="fragment">JSLint</p>
-						<p class="fragment">ESLint + eslint-plugin-react</p>
-					</section>
-
-					<section>
-						<h2>Example - ESLint</h2>
-						<pre><code class="javascript" data-trim contenteditable style="font-size: 20px;">
-// .eslintrc
-{
-  "parser": "babel-eslint",
-  "env": {
-    "browser": true,
-    "es6": true
+					<pre><code class="javascript" data-trim contenteditable style="font-size: 20px;">
+var styles = StyleSheet.create({
+  container: {
+    borderRadius: 4,
+    borderWidth: 0.5,
+    borderColor: '#d6d7da',
   },
-  "plugins": [
-    "react"
-  ],
-  "rules": {
-    "no-inline-comments": 2,
-    "comma-dangle": [2, "never"]
-    ...
-  }
-}
-						</code></pre>
-						<pre><code class="bash" data-trim contenteditable style="font-size: 20px;">
-// Lint
-eslint src/** test/**
-						</code></pre>
-					</section>
-
-
-				</section>
-
-				<section>
-
-					<section>
-						<h2>Test</h2>
-						<p>Because nobody does it</p>
-					</section>
-
-					<section>
-						<h2>Challenges</h2>
-						<p class="fragment">React DOM
-							<span class="fragment"> -
-							<a her="https://www.npmjs.com/package/jest-cli">jest-cli</a> /
-							<a her="https://www.npmjs.com/package/karma">karma</a> /
-							<a her="https://www.npmjs.com/package/react-addons-test-utils">react-addons-test-utils</a>
-							</span>
-						</p>
-						<p class="fragment">Unit Tests
-							<span class="fragment"> -
-							<a her="https://mochajs.org/">mocha</a> /
-							<a her="http://chaijs.com/">chai</a> /
-							<a her="https://shouldjs.github.io/">should</a>
-							</span>
-						</p>
-						<p class="fragment">Integration Tests
-							<span class="fragment"> -
-							<a her="http://nightwatchjs.org/">Nightwatch</a> /
-							<a her="https://www.browsersync.io/">BrowserSync</a>
-							</span>
-						</p>
-						<p class="fragment">Browser Tests
-							<span class="fragment"> -
-							<a her="https://www.npmjs.com/package/karma">karma</a> +
-							<a her="http://phantomjs.org/">phantomjs</a>
-							</span>
-						</p>
-						<p class="fragment">Mocking
-							<span class="fragment"> -
-							<a her="https://www.npmjs.com/package/jest-cli">jest-cli</a> /
-							<a her="https://www.npmjs.com/package/mockery">mockery</a> /
-							<a her="https://www.npmjs.com/package/sinon">sinon</a> /
-							<a her="https://www.npmjs.com/package/nock">nock</a>
-							</span>
-						</p>
-						<p class="fragment">Coverage
-							<span class="fragment"> -
-							<a her="https://www.npmjs.com/package/isparta">isparta</a> /
-							<a her="https://www.npmjs.com/package/istanbul">istanbul</a>
-							</span>
-						</p>
-
-						<h4 class="fragment">Remember to add proper transpiler!</h4>
-
-					</section>
-
-					<section>
-						<h2>Example - Unit Test</h2>
-						<pre><code class="javascript" data-trim contenteditable style="font-size: 20px;">
-describe('Some Object', function() {
-  describe('#init()', function() {
-
-    it('should have properties', function() {
-      var baseObject = {x: 1, y: null};
-      should(baseObject).have.property('x').which.is.Number();
-      should(baseObject).have.property('y').which.is.null();
-  ....
-						</code></pre>
-						<pre><code class="bash" data-trim contenteditable style="font-size: 20px;">
-// Run
-mocha 'test/unit/**/*.js' --compilers js:babel-register
-						</code></pre>
-					</section>
-
-				</section>
-
-				<section>
-
-					<section>
-						<h2>Build</h2>
-						<p>Because we need to put it together</p>
-					</section>
-
-					<section>
-						<h2>Challenges</h2>
-						<p class="fragment">Source maps</p>
-						<p class="fragment">Minification</p>
-						<p class="fragment">Compression</p>
-						<p class="fragment">Versioning</p>
-						<p class="fragment">Cleanup</p>
-					</section>
-
-					<section>
-						<h2>Tools</h2>
-						<p class="fragment"><a href="https://webpack.github.io/">Webpack</a></p>
-						<p class="fragment"><a href="http://browserify.org/">Browserify</a></p>
-					</section>
-
-					<section>
-						<h2>Example - Webpack</h2>
-						<pre><code class="javascript" data-trim contenteditable style="font-size: 14px;">
-// webpack.config.js
-module.exports = {
-  name: 'package',
-  devtool: 'source-map',
-  entry: path.join(__dirname, 'src', 'app.jsx'),
-  target: 'web',
-  module: {
-    loaders: [
-      { test: /\.jsx$/, exclude: /node_modules/, loader: 'babel-loader'}
-    ]
+  title: {
+    fontSize: 19,
+    fontWeight: 'bold',
   },
-  resolve: {
-    modulesDirectories: ['node_modules'],
-    extensions: ['', '.js', '.json']
+  activeTitle: {
+    color: 'red',
+  },
+});
+					</code></pre>
+					<pre><code class="html" data-trim contenteditable style="font-size: 20px;">
+&lt;View style={styles.container}&gt;
+  &lt;Text style={[styles.title, this.props.isActive &amp;&amp; styles.activeTitle]} /&gt;
+&lt;/View&gt;
+					</code></pre>	
+					</section>				
+
+										<section>
+										<h2>JS Styles Quirks</h2>
+											<p class="fragment">Camel case</p>
+											<p class="fragment">Quote text values</p>
+											<p class="fragment">Use numbers for dimensions (React adds 'px')</p>
+											<p class="fragment">Commans instead of semicolons</p>
+										</section>
+					<section>
+						<h2>Flexbox Froggy</h2>
+						<h4>http://flexboxfroggy.com/</h4>
+						<img data-src="img/flexbox1.png">
+					</section>
+					<section>
+						<img data-src="img/flexbox2.png">
+					</section>
+
+				<section>
+					<h2>Tips</h2>
+				</section>
+
+				<section>
+					<h2>React Native Playground</h2>
+					<h4>https://rnplay.org/</h4>
+					<img data-src="img/rnplay.png">
+				</section>	
+
+				<section>
+					<h2>Redux</h2>
+					<h4>For working example see: https://github.com/alinz/example-react-native-redux</h4>
+					<pre><code class="javascript" data-trim contenteditable style="font-size: 20px;">
+const createStoreWithMiddleware = applyMiddleware(thunk)(createStore);
+const reducer = combineReducers(reducers);
+const store = createStoreWithMiddleware(reducer);
+
+export default class App extends Component {
+  render() {
+    return (
+      &lt;Provider store={store}&gt;
+        &lt;CounterApp /&gt;
+      &lt;/Provider&gt;
+    );
   }
 }
-						</code></pre>
-						<pre><code class="bash" data-trim contenteditable style="font-size: 20px;">
-// Run
-webpack
-						</code></pre>
-					</section>
-
-				</section>
-
-				<section>
-
-					<section>
-						<h2>Deploy</h2>
-						<p>Because someone will be using it</p>
-					</section>
-
-					<section>
-						<h2>Where?</h2>
-						<p class="fragment">Files (sftp)
-							<span class="fragment">- <a href="https://www.npmjs.com/package/dploy">dploy</a></span>
-						</p>
-						<p class="fragment">S3
-							<span class="fragment">-
-								<a href="https://www.npmjs.com/package/deploy-s3">deploy-s3</a> /
-								<a href="https://www.npmjs.com/package/deploy-s3">s3-deploy</a>
-							</span>
-						</p>
-						<p class="fragment">CloudFront</p>
-						<p class="fragment">gh-pages :P
-							<span class="fragment">- <a href="https://www.npmjs.com/package/gh-pages">gh-pages</a></span>
-						</p>
-					</section>
-
-					<h4 class="fragment">Please, please use CI!</h4>
-
-				</section>
-
-				<section>
-
-					<section>
-						<h2>Serve</h2>
-						<p>Because it's nice to simplify our lives</p>
-					</section>
-
-					<section>
-						<h2>Challenges</h2>
-						<p class="fragment">Development server
-							<span class="fragment">-
-								<a href="https://webpack.github.io/docs/webpack-dev-server.html">webpack-dev-server</a> /
-								<a href="https://github.com/chrisdickinson/beefy">beefy</a>
-							</span>
-						</p>
-						<p class="fragment">Hot reloading
-							<span class="fragment">-
-								<a href="http://gaearon.github.io/react-hot-loader/">react-hot-loader</a> /
-								<a href="https://github.com/gaearon/react-transform-hmr">react-transform-hmr</a>
-							</span>
-						</p>
-					</section>
-
-				</section>
-
-				<section>
-					<section>
-						<h2>Project layout</h2>
-						<p>There is no best one :)</p>
-					</section>
-
-					<section>
-						<h2>Challenges</h2>
-						<p class="fragment">Everything is a component</p>
-						<p class="fragment">How to handle tests?</p>
-						<p class="fragment">How to handle assets?</p>
-					</section>
-
-					<section>
-						<h2>Some ideas</h2>
-						<p class="fragment">Dummy components</p>
-						<p class="fragment">Smart components</p>
-						<p class="fragment">Assets</p>
-						<p class="fragment">Develop own solution :)</p>
-					</section>
-
-					<section>
-						<h2>Root</h2>
-						<pre><code class="bash" data-trim contenteditable style="font-size: 20px;">
-├── .babelrc
-├── .eslintrc
-├── .gitignore
-├── .travis.yml
-├── circle.yml
-├── dist
-├── docs
-├── package.json
-├── src
-└── test
-						</code></pre>
-					</section>
-
-					<section>
-						<h2>test</h2>
-						<pre><code class="bash" data-trim contenteditable style="font-size: 20px;">
-test/
-├── e2e
-└── unit
-						</code></pre>
-					</section>
-
-					<section>
-						<h2>dist</h2>
-						<pre><code class="bash" data-trim contenteditable style="font-size: 18px;">
-dist/
-├── css
-│   ├── app-a7943ea11d.css
-│   ├── vendor-21ecda5146.css
-│   └── icons-250c6f457d.css
-├── fonts
-│   └── icons
-│       ├── Icons-05ae77937e.eot
-│       ├── Icons-c2906c403a.woff
-│       └── Icons-cff2ca9105.ttf
-├── img
-│   └── logo-f1e5710918.svg
-├── index.html
-└── js
-    ├── app-0f88bd7d2e.js
-    └── vendor-21ecda5146.js
-						</code></pre>
-					</section>
-
-					<section>
-						<h2>src</h2>
-						<pre><code class="bash" data-trim contenteditable style="font-size: 18px;">
-src/
-├── apps
-│   └── Account
-│   │   ├── index.js
-│   │   ├── Login.jsx
-│   │   └── Login.css
-│   └── index.js
-├── components
-│   ├── Button.css
-│   └── Button.jsx
-├── app.jsx
-├── routes.jsx
-└── assets
-						</code></pre>
-					</section>
-
-				</section>
+					</code></pre>
+										<pre><code class="javascript" data-trim contenteditable style="font-size: 20px;">
+export default connect(state => ({
+    state: state.counter
+  }),
+  (dispatch) => ({
+    actions: bindActionCreators(counterActions, dispatch)
+  })
+)(CounterApp);
+					</code></pre>
+				</section>								
 
 				<section>
 					<h1>Thanks!</h1>
