--- a/index.html
+++ b/index.html
@@ -38,20 +38,6 @@
 
 		<div class="reveal">
 			<div class="slides">
-				<section>
-					<h1>React Warsaw #3</h1>
-					<h3>Welcome!</h3>
-				</section>
-				<section>
-					<h1>Agenda</h1>
-					<ol>
-					<li>Welcome guests and sponsors</li>
-					<li>Introduction to building native mobile applications with React - Marcin Mieszek</li>
-					<li>Pizza time!</li>
-					<li>Spark Starter Kit: Rails, Spree, React, Webpack + Hot Reload and more - Adam Paca</li>
-					</ol>
-				</section>
-
 
 				<section>
 					<h1>React Warsaw #3</h1>
@@ -68,9 +54,8 @@
 					<p class="fragment">Why React Native?</p>
 					<p class="fragment">Architecture</p>
 					<p class="fragment">Getting Started</p>
-					<p class="fragment">Components and APIs</p>
+					<p class="fragment">Standard Components</p>
 					<p class="fragment">Styles</p>
-					<p class="fragment">Tips</p>
 				</section>
 
 				<section>
@@ -148,14 +133,7 @@ AppRegistry.registerComponent('Hello', () => Hello);
 					<p class="fragment">ListView</p>
 					<p class="fragment">ScrollView</p>
 					<p class="fragment">TabBarIOS</p>
-				</section>
-
-				<section>
-					<h2>APIs</h2>
-					<p class="fragment">StyleSheet</p>
-					<p class="fragment">CameraRoll</p>
-					<p class="fragment">Dimensions</p>
-				</section>				
+				</section>			
 
 					<section>
 					<h2>Styles and Flexbox</h2>
